# bimoi

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  domain.py  pyproject.toml  requirements-dev.txt
.cursor/: notion_architecture_content.md  notion_update_payload.json  pending_add_context.json
.cursor/rules/: notion-context.mdc  project-context.mdc
.github/workflows/: test.yml
bimoi/: __init__.py  contact_card.py  memory_repository.py  repository.py  service.py
bimoi/persistence/: __init__.py  neo4j_repository.py
bot/: __init__.py  __main__.py
docs/: CONVERSATION_ARCHITECTURE.md  DATABASE.md  DEPENDENCIES_AND_CI.md  MULTI_USER_ARCHITECTURE.md  PROJECT_CONTEXT.md
flows/: telegram.yaml  telegram_machine.json
poc/: .env.example  README.md  bot.py
scripts/: dev-check-telegram.sh  dev-down.sh  dev-up.sh  migrate_context_to_relationships.py  migrate_telegram_ids_to_accounts.py  notion_update_arch.py  set_telegram_commands.py  set_webhook_ngrok.py
src/api/: __init__.py  flow_adapter.py  flow_loader.py  flow_runner.py  main.py  xstate_machine.py
src/bimoi/: __init__.py
src/bimoi/application/: __init__.py  contact_service.py  dto.py  ports.py
src/bimoi/domain/: __init__.py  entities.py
src/bimoi/infrastructure/: __init__.py  identity.py  memory_repository.py  phone.py
src/bimoi/infrastructure/persistence/: __init__.py  neo4j_repository.py
src/bot/: __init__.py  __main__.py
tests/: __init__.py  test_api.py  test_contact_service.py  test_flow.py  test_identity.py  test_neo4j_repository.py  test_phone.py
