[project]
name = "bimoi"
version = "0.1.0"
description = "Externalize real relationships: who you know and why they matter."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "testcontainers[neo4j]>=4.0",
    "pre-commit>=4.0.0",
]
bot = [
    "neo4j>=5.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bimoi*", "bot*", "api*"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["api", "bimoi", "bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# No pythonpath: use src layout; install with pip install -e ".[dev]" so tests run against installed package

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# isort handles import sorting; ruff handles lint + format
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before other imports so .env is loaded first
"poc/bot.py" = ["E402"]
"src/bot/__main__.py" = ["E402"]
"src/api/main.py" = ["E402"]
